Use `toList()` for streams
Signed-off-by: Ben Sherman <bentshermann@gmail.com>