@@ -24,7 +24,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 import groovy.lang.Tuple2;
 import nextflow.script.ast.AssignmentExpression;
@@ -348,7 +347,7 @@ public class ScriptAstBuilder {
                     result.putNodeMetaData("_START_ALIAS", tokenPosition(it.alias));
                 return ast( result, it );
             })
-            .collect(Collectors.toList());
+            .toList();
 
         return ast( new IncludeNode(source, modules), ctx );
     }
@@ -401,7 +400,7 @@ public class ScriptAstBuilder {
         var statements = ctx.statement().stream()
             .map(this::statement)
             .map(stmt -> checkDirective(stmt, "Invalid process directive"))
-            .collect(Collectors.toList());
+            .toList();
         return ast( block(null, statements), ctx );
     }
 
@@ -411,7 +410,7 @@ public class ScriptAstBuilder {
         var statements = ctx.statement().stream()
             .map(this::statement)
             .map(stmt -> checkDirective(stmt, "Invalid process input"))
-            .collect(Collectors.toList());
+            .toList();
         return ast( block(null, statements), ctx );
     }
 
@@ -421,7 +420,7 @@ public class ScriptAstBuilder {
         var statements = ctx.statement().stream()
             .map(this::statement)
             .map(stmt -> checkDirective(stmt, "Invalid process output"))
-            .collect(Collectors.toList());
+            .toList();
         return ast( block(null, statements), ctx );
     }
 
@@ -543,7 +542,7 @@ public class ScriptAstBuilder {
 
         var statements = ctx.identifier().stream()
             .map(this::workflowTake)
-            .collect(Collectors.toList());
+            .toList();
         return ast( block(null, statements), ctx );
     }
 
@@ -560,7 +559,7 @@ public class ScriptAstBuilder {
         var statements = ctx.statement().stream()
             .map(this::workflowEmit)
             .filter(stmt -> stmt != null)
-            .collect(Collectors.toList());
+            .toList();
         var result = ast( block(null, statements), ctx );
         var hasEmitExpression = statements.stream().anyMatch(this::isEmitExpression);
         if( hasEmitExpression && statements.size() > 1 )
@@ -594,7 +593,7 @@ public class ScriptAstBuilder {
             .map(this::statement)
             .map(this::checkWorkflowPublisher)
             .filter(stmt -> stmt != null)
-            .collect(Collectors.toList());
+            .toList();
         return ast( block(null, statements), ctx );
     }
 
@@ -619,7 +618,7 @@ public class ScriptAstBuilder {
             return EmptyStatement.INSTANCE;
         var statements = ctx.outputTargetBody().stream()
             .map(this::outputTargetBody)
-            .collect(Collectors.toList());
+            .toList();
         return ast( block(null, statements), ctx );
     }
 
@@ -716,7 +715,7 @@ public class ScriptAstBuilder {
             return block(new VariableScope(), Collections.emptyList());
         var statements = ctx.statement().stream()
             .map(this::statement)
-            .collect(Collectors.toList());
+            .toList();
         return ast( block(new VariableScope(), statements), ctx );
     }
 
@@ -724,7 +723,7 @@ public class ScriptAstBuilder {
         var tryStatement = statementOrBlock(ctx.statementOrBlock());
         var catchClauses = ctx.catchClause().stream()
             .map(this::catchClause)
-            .collect(Collectors.toList());
+            .toList();
         var result = tryCatchS(tryStatement);
         for( var clause : catchClauses )
             for( var stmt : clause )
@@ -742,7 +741,7 @@ public class ScriptAstBuilder {
                 var code = statementOrBlock(ctx.statementOrBlock());
                 return ast( new CatchStatement(variable, code), ctx );
             })
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<ClassNode> catchTypes(CatchTypesContext ctx) {
@@ -751,7 +750,7 @@ public class ScriptAstBuilder {
 
         return ctx.qualifiedClassName().stream()
             .map(this::qualifiedClassName)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private Statement returnStatement(ExpressionContext ctx) {
@@ -780,7 +779,7 @@ public class ScriptAstBuilder {
             // multiple assignment
             var variables = ctx.variableNames().identifier().stream()
                 .map(ident -> (Expression) variableName(ident))
-                .collect(Collectors.toList());
+                .toList();
             var target = new ArgumentListExpression(variables);
             var initializer = expression(ctx.initializer);
             return stmt(ast( declX(target, initializer), ctx ));
@@ -799,7 +798,7 @@ public class ScriptAstBuilder {
     private Expression variableNames(VariableNamesContext ctx) {
         var vars = ctx.identifier().stream()
             .map(this::variableName)
-            .collect(Collectors.toList());
+            .toList();
         return ast( new TupleExpression(vars), ctx );
     }
 
@@ -1365,7 +1364,7 @@ public class ScriptAstBuilder {
     private BlockStatement blockStatementsWithLabels(BlockStatementsWithLabelsContext ctx) {
         var statements = ctx.statementOrLabeled().stream()
             .map(this::statementOrLabeled)
-            .collect(Collectors.toList());
+            .toList();
         return ast( block(new VariableScope(), statements), ctx );
     }
 
@@ -1397,7 +1396,7 @@ public class ScriptAstBuilder {
         
         return ctx.expression().stream()
             .map(this::expression)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private Expression map(MapContext ctx) {
@@ -1406,7 +1405,7 @@ public class ScriptAstBuilder {
 
         var entries = ctx.mapEntryList().mapEntry().stream()
             .map(this::mapEntry)
-            .collect(Collectors.toList());
+            .toList();
         var result = mapX(entries);
         if( ctx.COMMA() != null )
             result.putNodeMetaData(TRAILING_COMMA, Boolean.TRUE);
@@ -1537,7 +1536,7 @@ public class ScriptAstBuilder {
 
         var params = ctx.formalParameter().stream()
             .map(this::formalParameter)
-            .collect(Collectors.toList());
+            .toList();
         for( int n = params.size(), i = n - 1; i >= 0; i -= 1 ) {
             var param = params.get(i);
             for( var other : params ) {
