@@ -23,7 +23,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import groovy.json.JsonSlurper;
@@ -122,7 +121,7 @@ public class ParameterSchemaVisitor extends ScriptVisitorSupport {
                     ? map.entrySet().stream()
                     : Stream.empty()
             )
-            .collect(Collectors.toList());
+            .toList();
 
         if( entries.isEmpty() )
             return;
